fix align

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,11 +28,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  -webkit-text-size-adjust: 100%;
+  /* -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%; */
 
-  /* -webkit-text-size-adjust: none; */
+  -webkit-text-size-adjust: none;
 
   /* -webkit-font-feature-settings: 'kern' 1; */
 }
